darkmode and admin role

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+GITHUB_SECRET=1584e36a99c8a43d280eb1ef049a9079f89b8ffd
+GITHUB_ID=63401bdeee6d27913962
+NEXTAUTH_SECRET=basecd
+NEXTAUTH_URL=http://localhost:3000/
